Add initial changes for plugin spec
